wacc_examples/invalid_TEST/semanticErr/arrays/arrayExprInvalid_US.wacc
# array lhs assign identifier missing

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1, invalid_epxression]
end
